// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=false > showOpenedGroup=false > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 4,
  "Donald Knuth": 0,
  "Ireland": 2,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=false > showOpenedGroup=false > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 4,
  "Donald Knuth": 0,
  "Ireland": 2,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=false > showOpenedGroup=true > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 7,
  "Donald Knuth": 0,
  "Ireland": 9,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=false > showOpenedGroup=true > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 7,
  "Donald Knuth": 0,
  "Ireland": 9,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=-1 > showOpenedGroup=false > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 2,
  "Donald Knuth": 0,
  "Ireland": 1,
  "Total": 1,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=-1 > showOpenedGroup=false > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 2,
  "Donald Knuth": 0,
  "Ireland": 1,
  "Total": 1,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=-1 > showOpenedGroup=true > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 3,
  "Donald Knuth": 0,
  "Ireland": 3,
  "Total": 1,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=-1 > showOpenedGroup=true > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 3,
  "Donald Knuth": 0,
  "Ireland": 3,
  "Total": 1,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=0 > showOpenedGroup=false > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 2,
  "Donald Knuth": 0,
  "Ireland": 2,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=0 > showOpenedGroup=false > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 2,
  "Donald Knuth": 0,
  "Ireland": 2,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=0 > showOpenedGroup=true > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 3,
  "Donald Knuth": 0,
  "Ireland": 6,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=0 > showOpenedGroup=true > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 3,
  "Donald Knuth": 0,
  "Ireland": 6,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=1 > showOpenedGroup=false > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 4,
  "Donald Knuth": 0,
  "Ireland": 1,
  "Total": 6,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=1 > showOpenedGroup=false > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 4,
  "Donald Knuth": 0,
  "Ireland": 1,
  "Total": 6,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=1 > showOpenedGroup=true > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 5,
  "Donald Knuth": 0,
  "Ireland": 5,
  "Total": 6,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=multipleColumns > groupHideOpenParents=true > groupDefaultExpanded=1 > showOpenedGroup=true > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 5,
  "Donald Knuth": 0,
  "Ireland": 5,
  "Total": 6,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=singleColumn > showOpenedGroup=false > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 4,
  "Donald Knuth": 0,
  "Ireland": 2,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=singleColumn > showOpenedGroup=false > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 4,
  "Donald Knuth": 0,
  "Ireland": 2,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=singleColumn > showOpenedGroup=true > rowSelection.checkboxLocation=autoGroupColumn 1`] = `
{
  "2000": 7,
  "Donald Knuth": 0,
  "Ireland": 2,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;

exports[`ag-grid find API > with rowModelType=clientSide - checkboxes > groupDisplayType=singleColumn > showOpenedGroup=true > rowSelection.checkboxLocation=selectionColumn 1`] = `
{
  "2000": 7,
  "Donald Knuth": 0,
  "Ireland": 2,
  "Total": 8,
  "autoColDef.cellRendererParams.totalValueGetter": 0,
}
`;
